--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Presentation"
-    url: /presentation/    
+  - title: "Presentations"
+    url: /presentations/    
     
   - title: "Portfolio"
     url: /portfolio/
