--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Postdoc, University of North Carolina Wilmington"
   location         : "Wilmington, NC"
-  employer         : "Dr. Yalei You"
+  employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=O1COHjwAAAAJ&hl=en&oi=ao"
   ryuj@uncw.edu    : " "
