--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jihoon Ryu"
   avatar           : "profile.png"
-  bio              : "Postdoc, University of North Carolina Wilmington"
+  bio              : "Postdoc <br> University of North Carolina Wilmington"
   location         : "Wilmington, NC"
   employer         : 
   pubmed           : 
